--- a/ui/main.ui
+++ b/ui/main.ui
@@ -38,20 +38,27 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0" colspan="2">
+    <item row="4" column="0" colspan="2">
      <widget class="QPushButton" name="btn_launch">
       <property name="text">
        <string>Launch</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="0" colspan="2">
+    <item row="5" column="0" colspan="2">
      <widget class="QTextBrowser" name="textBrowser">
       <property name="styleSheet">
        <string notr="true">background-color: white;</string>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0" colspan="2">
+     <widget class="QPushButton" name="btn_save">
+      <property name="text">
+       <string>Save Path</string>
       </property>
      </widget>
     </item>
